--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@ body {
     width: 100%;
     font-size: 18px;
     font-family: serif;
-    margin: 0;
-    padding: 0;
 }
 
 *{
@@ -13,22 +11,28 @@ body {
     margin:0;
 }
 
-.innerWrap {
-    width: 1240px;
-    margin: 0 auto;
-    padding: 80px 20px 0;
+
+header nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
 }
 
-header .innerWrap {
-    height: 5px;
-    position: relative;
-    
+header nav ul {
+    display: flex;
+    width: 1240px;
+    margin: 0 auto;
+    padding: 10px 20px;
+    justify-content: space-around;
+    list-style: none;
 }
 
 header h1 {
 image-rendering: 400px;
 font-size: 30px;
-padding: 80px ;
+padding: 220px ;
 text-align: center;
 }
   
@@ -40,52 +44,25 @@ header {
    border:1px solid gray;
    height: 700px;
    width: 100%;
-   text-align: center;
-   justify-content: space-between;
-   padding: 10px;
-   display: flex;
 }
 
 
-header nav  {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 100;
-}
-
-
-header ul {
-    list-style: none;
-    width: 50px;
-    justify-content: space-between;
-    padding-top: 10px;
-    display: table;
-    margin: 0 auto;
-    padding: 0;
-    text-align: center;
-}
-
-header ul li {
-    padding: 10px;
-    border: 2px solid #555;
+header ul li a:hover {
     margin-bottom: 20px;
-    border-radius: 5px;
+    text-decoration: underline;
 }
 
 a {
     text-decoration: none;
     color: black;
-    display: block;
-    padding: 4px 0;
-    width: 100%;
 }
 
-img {
+img  {
     width: 100px;
 }
 
 main h2 {
+    padding-top: 20px;
     text-align: center;
     font-size: 60px;
     letter-spacing: .0.5em;
@@ -94,6 +71,7 @@ main h2 {
 
 main {
     background-color: #f5f5f5;
+    padding-bottom: 0;
 }
 
 
@@ -120,6 +98,9 @@ section p ul {
 
 .container {
     display: flex;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 
@@ -135,7 +116,7 @@ section p ul {
 }
 
 .cafe img {
-    width: 50%;
+    width: 40%;
     margin-top: 25px;
     margin-bottom: 60px;
     padding: 60px;
